--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "wanikani-sdk",
-  "version": "1.0.0",
+  "name": "@lakardion/wanikani-sdk",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "tsc",
