feat(npm) add changeset and initial publish - Add changeset config - Add publish github action

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lakardion/wanikani-sdk",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -9,12 +9,15 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "tsc",
     "test": "vitest run",
-    "test:dev": "vitest"
+    "test:dev": "vitest",
+    "ci": "pnm run lint && pnpm run test && pnpm run build",
+    "release": "pnpm run ci && changeset publish"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "@types/node": "^20.6.2",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
