--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "tsc",
     "test": "vitest run",
     "test:dev": "vitest",
-    "ci": "pnm run lint && pnpm run test && pnpm run build",
+    "ci": "pnpm run lint && pnpm run test && pnpm run build",
     "release": "pnpm run ci && changeset publish"
   },
   "keywords": [],
