--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lakardion/wanikani-sdk",
+  "name": "wanikani-sdk",
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
